--- a/Grupo06/src/main/resources/general/primary.fxml
+++ b/Grupo06/src/main/resources/general/primary.fxml
@@ -1,16 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.PrimaryController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #EEEEEE;" stylesheets="@../style/primary.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.PrimaryController">
    <children>
-      <Label text="Primary View" />
-      <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
+      <Pane layoutX="29.0" layoutY="79.0" prefHeight="343.0" prefWidth="383.0" style="-fx-border-color: black;" />
+      <TextField layoutX="456.0" layoutY="226.0" prefHeight="49.0" prefWidth="414.0" style="-fx-border-color: #393E46;" />
+      <ImageView id="closeHand" fitHeight="30.0" fitWidth="30.0" layoutX="821.0" layoutY="236.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/searchIcon.png" />
+         </image>
+      </ImageView>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="456.0" layoutY="168.0" prefHeight="49.0" prefWidth="414.0" text="TITULOXD" textFill="#232931">
+         <font>
+            <Font name="Berlin Sans FB Bold" size="36.0" />
+         </font>
+      </Label>
+      <Button id="buttonP" layoutX="509.0" layoutY="306.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="104.0" text="Ingresar">
+         <font>
+            <Font name="Berlin Sans FB" size="12.0" />
+         </font>
+      </Button>
+      <Button id="buttonP" layoutX="714.0" layoutY="306.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="104.0" text="Eliminar">
+         <font>
+            <Font name="Berlin Sans FB" size="12.0" />
+         </font>
+      </Button>
+      <Label id="closeHand" layoutX="875.0" layoutY="1.0" onMouseClicked="#closeWindow" prefHeight="23.0" prefWidth="21.0" text="X">
+         <font>
+            <Font name="Berlin Sans FB Demi Bold" size="24.0" />
+         </font>
+      </Label>
+      <Pane id="panebar" layoutX="442.0" layoutY="437.0" prefHeight="49.0" prefWidth="442.0">
+         <children>
+            <ImageView fitHeight="40.0" fitWidth="38.0" layoutX="381.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/downloadIcon.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="38.0" layoutX="202.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/carryIcon.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="38.0" layoutX="34.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/gameIcon.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
    </children>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
-</VBox>
+</AnchorPane>
