--- a/Grupo06/src/main/resources/general/primary.fxml
+++ b/Grupo06/src/main/resources/general/primary.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #EEEEEE;" stylesheets="@../style/primary.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.PrimaryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #EEEEEE;" stylesheets="@../style/primary.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.PrimaryController">
    <children>
       <Pane layoutX="29.0" layoutY="79.0" prefHeight="343.0" prefWidth="383.0" style="-fx-border-color: black;" />
       <TextField layoutX="456.0" layoutY="226.0" prefHeight="49.0" prefWidth="414.0" style="-fx-border-color: #393E46;" />
@@ -58,5 +57,10 @@
             </ImageView>
          </children>
       </Pane>
+      <Button id="buttonP" layoutX="611.0" layoutY="375.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="Estadisticas">
+         <font>
+            <Font name="Berlin Sans FB" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
