--- a/Grupo06/src/main/resources/general/statistics.fxml
+++ b/Grupo06/src/main/resources/general/statistics.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="455.0" prefWidth="699.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="general.StatisticsController">
+<AnchorPane id="AnchorPane" prefHeight="455.0" prefWidth="699.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.StatisticsController">
    <children>
       <VBox alignment="TOP_CENTER" prefHeight="455.0" prefWidth="699.0">
          <children>
@@ -55,5 +55,10 @@
             </HBox>
          </children>
       </VBox>
+      <Label id="closeHand" layoutX="689.0" onMouseClicked="#closeWindow" prefHeight="23.0" prefWidth="21.0" text="X">
+         <font>
+            <Font name="Berlin Sans FB Demi Bold" size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
