--- a/Grupo06/src/main/resources/style/primary.css
+++ b/Grupo06/src/main/resources/style/primary.css
@@ -33,3 +33,9 @@
     -fx-background-radius: 20;
 }
 
+.label-with-bottom-border {
+    -fx-border-style: hidden hidden solid hidden;
+    -fx-border-width: 0 0 1 0;
+    -fx-border-color: black;
+}
+
