--- a/Grupo06/src/main/resources/general/Game.fxml
+++ b/Grupo06/src/main/resources/general/Game.fxml
@@ -2,33 +2,58 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="paneGame" cache="true" cacheHint="SCALE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="776.0" stylesheets="@../style/primary.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.GameController">
+<AnchorPane fx:id="paneGame" cache="true" cacheHint="SCALE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="931.0" stylesheets="@../style/primary.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.GameController">
    <children>
-      <ImageView fx:id="ahorcadoView" fitHeight="150.0" fitWidth="200.0" layoutX="293.0" layoutY="66.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/gameIcon.png" />
-         </image>
-      </ImageView>
-      <HBox fx:id="HBoxLabels" alignment="CENTER" layoutX="23.0" layoutY="286.0" prefHeight="100.0" prefWidth="687.0" spacing="30.0" />
-      <TextField fx:id="textField" layoutX="559.0" layoutY="189.0" onKeyReleased="#complete" prefHeight="63.0" prefWidth="100.0">
+      <ImageView fx:id="ahorcadoView" fitHeight="150.0" fitWidth="200.0" layoutX="366.0" layoutY="125.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" />
+      <HBox fx:id="HBoxLabels" alignment="CENTER" layoutX="21.0" layoutY="300.0" prefHeight="100.0" prefWidth="889.0" spacing="30.0" />
+      <TextField fx:id="textField" layoutX="703.0" layoutY="160.0" onKeyReleased="#complete" prefHeight="63.0" prefWidth="111.0">
          <font>
             <Font size="27.0" />
          </font>
       </TextField>
-      <Label fx:id="numTryLabel" layoutX="571.0" layoutY="141.0" prefHeight="31.0" prefWidth="60.0" text="0">
+      <Label layoutX="42.0" layoutY="66.0" prefHeight="40.0" prefWidth="183.0" text="Correctas">
          <font>
             <Font name="System Italic" size="32.0" />
          </font>
       </Label>
-      <Label id="closeHand" fx:id="backButton" alignment="CENTER" contentDisplay="CENTER" layoutX="741.0" layoutY="14.0" onMouseClicked="#back" prefHeight="30.0" prefWidth="35.0" text="X">
+      <Label id="closeHand" fx:id="backButton" alignment="CENTER" contentDisplay="CENTER" layoutX="868.0" layoutY="-1.0" onMouseClicked="#back" prefHeight="30.0" prefWidth="35.0" text="X">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label fx:id="numTryLabel" layoutX="843.0" layoutY="114.0" prefHeight="31.0" prefWidth="60.0" text="0">
+         <font>
+            <Font name="System Italic" size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="score" layoutX="47.0" layoutY="111.0" prefHeight="40.0" prefWidth="89.0" text="0">
+         <font>
+            <Font name="System Italic" size="32.0" />
+         </font>
+      </Label>
+      <Label layoutX="42.0" layoutY="171.0" prefHeight="40.0" prefWidth="183.0" text="High Score">
+         <font>
+            <Font name="System Italic" size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="highScoreLabel" layoutX="51.0" layoutY="216.0" prefHeight="40.0" prefWidth="80.0" text="0">
+         <font>
+            <Font name="System Italic" size="32.0" />
+         </font>
+      </Label>
+      <Label layoutX="351.0" layoutY="46.0" prefHeight="40.0" prefWidth="253.0" text="EL AHORCADO">
+         <font>
+            <Font name="System Italic" size="32.0" />
+         </font>
+      </Label>
+      <Label layoutX="695.0" layoutY="107.0" prefHeight="47.0" prefWidth="148.0" text="Intentos:">
+         <font>
+            <Font name="System Italic" size="32.0" />
          </font>
       </Label>
    </children>
