--- a/Grupo06/src/main/resources/general/Game.fxml
+++ b/Grupo06/src/main/resources/general/Game.fxml
@@ -7,18 +7,18 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="paneGame" cache="true" cacheHint="SCALE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="931.0" stylesheets="@../style/primary.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.GameController">
+<AnchorPane fx:id="paneGame" cache="true" cacheHint="SCALE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #eeeeee;" stylesheets="@../style/primary.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.GameController">
    <children>
-      <ImageView fx:id="ahorcadoView" fitHeight="150.0" fitWidth="200.0" layoutX="366.0" layoutY="125.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" />
-      <HBox fx:id="HBoxLabels" alignment="CENTER" layoutX="21.0" layoutY="300.0" prefHeight="100.0" prefWidth="889.0" spacing="30.0" />
-      <TextField fx:id="textField" layoutX="703.0" layoutY="160.0" onKeyReleased="#complete" prefHeight="63.0" prefWidth="111.0">
+      <ImageView fx:id="ahorcadoView" fitHeight="283.0" fitWidth="378.0" layoutX="50.0" layoutY="82.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" />
+      <HBox fx:id="HBoxLabels" alignment="CENTER" layoutX="22.0" layoutY="377.0" prefHeight="100.0" prefWidth="861.0" spacing="30.0" style="-fx-background-color: #D8D9DA; -fx-border-color: #777777;" />
+      <TextField fx:id="textField" layoutX="610.0" layoutY="197.0" onKeyReleased="#complete" prefHeight="47.0" prefWidth="89.0">
          <font>
             <Font size="27.0" />
          </font>
       </TextField>
-      <Label layoutX="42.0" layoutY="66.0" prefHeight="40.0" prefWidth="183.0" text="Correctas">
+      <Label layoutX="539.0" layoutY="271.0" prefHeight="40.0" prefWidth="144.0" text="Correctas">
          <font>
-            <Font name="System Italic" size="32.0" />
+            <Font size="20.0" />
          </font>
       </Label>
       <Label id="closeHand" fx:id="backButton" alignment="CENTER" contentDisplay="CENTER" layoutX="868.0" layoutY="-1.0" onMouseClicked="#back" prefHeight="30.0" prefWidth="35.0" text="X">
@@ -26,34 +26,39 @@
             <Font name="Berlin Sans FB Demi Bold" size="24.0" />
          </font>
       </Label>
-      <Label fx:id="numTryLabel" layoutX="843.0" layoutY="114.0" prefHeight="31.0" prefWidth="60.0" text="0">
+      <Label fx:id="numTryLabel" layoutX="567.0" layoutY="156.0" prefHeight="30.0" prefWidth="44.0" text="0">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="score" layoutX="539.0" layoutY="311.0" prefHeight="40.0" prefWidth="89.0" text="0">
+         <font>
+            <Font name="System Bold Italic" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="695.0" layoutY="271.0" prefHeight="40.0" prefWidth="183.0" text="High Score">
+         <font>
+            <Font name="System Italic" size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="highScoreLabel" layoutX="695.0" layoutY="311.0" prefHeight="40.0" prefWidth="80.0" text="0">
+         <font>
+            <Font name="System Bold Italic" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="64.0" layoutY="29.0" prefHeight="40.0" prefWidth="253.0" text="EL AHORCADO">
          <font>
             <Font name="System Italic" size="32.0" />
          </font>
       </Label>
-      <Label fx:id="score" layoutX="47.0" layoutY="111.0" prefHeight="40.0" prefWidth="89.0" text="0">
+      <Label layoutX="492.0" layoutY="49.0" prefHeight="100.0" prefWidth="367.0" text="Intenta adivinar la palabra antes de que Jorge decida escribirle a su EX" wrapText="true">
          <font>
-            <Font name="System Italic" size="32.0" />
+            <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="42.0" layoutY="171.0" prefHeight="40.0" prefWidth="183.0" text="High Score">
+      <Label layoutX="492.0" layoutY="159.0" text="Tienes     intentos para ayudarlo">
          <font>
-            <Font name="System Italic" size="32.0" />
-         </font>
-      </Label>
-      <Label fx:id="highScoreLabel" layoutX="51.0" layoutY="216.0" prefHeight="40.0" prefWidth="80.0" text="0">
-         <font>
-            <Font name="System Italic" size="32.0" />
-         </font>
-      </Label>
-      <Label layoutX="351.0" layoutY="46.0" prefHeight="40.0" prefWidth="253.0" text="EL AHORCADO">
-         <font>
-            <Font name="System Italic" size="32.0" />
-         </font>
-      </Label>
-      <Label layoutX="695.0" layoutY="107.0" prefHeight="47.0" prefWidth="148.0" text="Intentos:">
-         <font>
-            <Font name="System Italic" size="32.0" />
+            <Font size="20.0" />
          </font>
       </Label>
    </children>
