--- a/Grupo06/src/main/resources/general/dictionary.fxml
+++ b/Grupo06/src/main/resources/general/dictionary.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #EEEEEE;" stylesheets="@../style/primary.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.DictionaryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #EEEEEE;" stylesheets="@../style/primary.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.DictionaryController">
    <children>
-      <Pane layoutX="29.0" layoutY="79.0" prefHeight="343.0" prefWidth="383.0" style="-fx-border-color: black;">
+      <Pane layoutX="492.0" layoutY="80.0" prefHeight="343.0" prefWidth="383.0">
          <children>
             <ScrollPane prefHeight="343.0" prefWidth="383.0">
                <content>
@@ -46,7 +46,8 @@
                         <VBox fx:id="vbSimilars" alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="308.0">
                            <padding>
                               <Insets left="50.0" />
-                           </padding></VBox>
+                           </padding>
+                        </VBox>
                         <Label fx:id="lbPrefix" prefHeight="31.0" prefWidth="334.0" text="Palabras que inician con  &quot;XD&quot;:">
                            <font>
                               <Font size="14.0" />
@@ -55,7 +56,8 @@
                         <VBox fx:id="vbPrefix" alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="366.0">
                            <padding>
                               <Insets left="50.0" />
-                           </padding></VBox>
+                           </padding>
+                        </VBox>
                         <Label fx:id="lbReverse" prefHeight="31.0" prefWidth="334.0" text="Palabras que terminan con  &quot;XD&quot;:">
                            <font>
                               <Font size="14.0" />
@@ -64,29 +66,30 @@
                         <VBox fx:id="vbReverse" alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="366.0">
                            <padding>
                               <Insets left="50.0" />
-                           </padding></VBox>
+                           </padding>
+                        </VBox>
                      </children>
                   </VBox>
                </content>
             </ScrollPane>
          </children></Pane>
-      <TextField fx:id="tfSearch" layoutX="456.0" layoutY="226.0" onKeyPressed="#capitalize" onKeyReleased="#blockScape" prefHeight="49.0" prefWidth="414.0" style="-fx-border-color: #393E46;" />
-      <ImageView id="closeHand" fitHeight="30.0" fitWidth="30.0" layoutX="821.0" layoutY="236.0" onMouseClicked="#searchWord" pickOnBounds="true" preserveRatio="true">
+      <TextField fx:id="tfSearch" layoutX="34.0" layoutY="226.0" onKeyPressed="#capitalize" onKeyReleased="#blockScape" prefHeight="49.0" prefWidth="414.0" style="-fx-border-color: #393E46;" />
+      <ImageView id="closeHand" fitHeight="30.0" fitWidth="30.0" layoutX="399.0" layoutY="236.0" onMouseClicked="#searchWord" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/searchIcon.png" />
          </image>
       </ImageView>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="456.0" layoutY="168.0" prefHeight="49.0" prefWidth="414.0" text="TITULOXD" textFill="#232931">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="34.0" layoutY="149.0" prefHeight="49.0" prefWidth="414.0" text="WordSearch" textFill="#232931">
          <font>
             <Font name="Berlin Sans FB Bold" size="36.0" />
          </font>
       </Label>
-      <Button id="buttonP" layoutX="509.0" layoutY="306.0" mnemonicParsing="false" onAction="#addWord" prefHeight="40.0" prefWidth="104.0" text="Añadir">
+      <Button id="buttonP" layoutX="87.0" layoutY="306.0" mnemonicParsing="false" onAction="#addWord" prefHeight="40.0" prefWidth="104.0" text="Añadir">
          <font>
             <Font name="Berlin Sans FB" size="12.0" />
          </font>
       </Button>
-      <Button id="buttonP" layoutX="714.0" layoutY="306.0" mnemonicParsing="false" onAction="#deleteWord" prefHeight="40.0" prefWidth="104.0" text="Eliminar">
+      <Button id="buttonP" layoutX="292.0" layoutY="306.0" mnemonicParsing="false" onAction="#deleteWord" prefHeight="40.0" prefWidth="104.0" text="Eliminar">
          <font>
             <Font name="Berlin Sans FB" size="12.0" />
          </font>
@@ -96,29 +99,29 @@
             <Font name="Berlin Sans FB Demi Bold" size="24.0" />
          </font>
       </Label>
-      <Pane id="panebar" layoutX="442.0" layoutY="437.0" prefHeight="49.0" prefWidth="442.0">
+      <Pane id="panebar" layoutX="20.0" layoutY="423.0" prefHeight="55.0" prefWidth="442.0">
          <children>
-            <ImageView id="closeHand" fitHeight="40.0" fitWidth="38.0" layoutX="381.0" layoutY="5.0" onMouseClicked="#downloadWords" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="closeHand" fitHeight="49.0" fitWidth="49.0" layoutX="368.0" layoutY="3.0" onMouseClicked="#downloadWords" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/downloadIcon.png" />
                </image>
             </ImageView>
-            <ImageView id="closeHand" fitHeight="40.0" fitWidth="38.0" layoutX="202.0" layoutY="5.0" onMouseClicked="#uploadWords" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="closeHand" fitHeight="49.0" fitWidth="49.0" layoutX="260.0" layoutY="3.0" onMouseClicked="#uploadWords" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/carryIcon.png" />
                </image>
             </ImageView>
-            <ImageView id="closeHand" fitHeight="40.0" fitWidth="38.0" layoutX="34.0" layoutY="5.0" onMouseClicked="#playGame" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="closeHand" fitHeight="49.0" fitWidth="49.0" layoutX="41.0" layoutY="3.0" onMouseClicked="#playGame" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/gameIcon.png" />
                </image>
             </ImageView>
+            <ImageView id="closeHand" fitHeight="49.0" fitWidth="49.0" layoutX="146.0" layoutY="3.0" onMouseClicked="#showStadistics" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/staticsIcon.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
-      <Button id="buttonP" layoutX="611.0" layoutY="375.0" mnemonicParsing="false" onAction="#showStadistics" prefHeight="40.0" prefWidth="125.0" text="Estadisticas">
-         <font>
-            <Font name="Berlin Sans FB" size="12.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
