--- a/Grupo06/src/main/resources/general/statistics.fxml
+++ b/Grupo06/src/main/resources/general/statistics.fxml
@@ -11,40 +11,84 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="455.0" prefWidth="699.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.StatisticsController">
+<AnchorPane id="AnchorPane" prefHeight="455.0" prefWidth="699.0" stylesheets="@../style/statics.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.StatisticsController">
    <children>
       <VBox alignment="TOP_CENTER" prefHeight="455.0" prefWidth="699.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="53.0" prefWidth="102.0" text="Estadisticas" />
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="53.0" prefWidth="128.0" text="Statistics">
+               <font>
+                  <Font name="Berlin Sans FB" size="24.0" />
+               </font></Label>
             <HBox prefHeight="354.0" prefWidth="646.0">
                <children>
                   <VBox prefHeight="200.0" prefWidth="300.0" spacing="10.0">
                      <children>
-                        <Label text="Palabras almacenadas" />
-                        <Label fx:id="lbTotalWords" prefHeight="18.0" prefWidth="39.0" text="00000" />
-                        <Label text="Palabra mas larga" />
-                        <Label fx:id="lbLongerWord" text="Palabra" />
+                        <Label prefHeight="16.0" prefWidth="139.0" text="Palabras almacenadas:">
+                           <font>
+                              <Font name="Berlin Sans FB" size="14.0" />
+                           </font></Label>
+                        <Label fx:id="lbTotalWords" prefHeight="18.0" prefWidth="39.0" text="00000">
+                           <font>
+                              <Font name="Berlin Sans FB" size="13.0" />
+                           </font></Label>
+                        <Label text="Palabra mas larga:">
+                           <font>
+                              <Font name="Berlin Sans FB" size="14.0" />
+                           </font></Label>
+                        <Label fx:id="lbLongerWord" text="Palabra">
+                           <font>
+                              <Font name="Berlin Sans FB" size="13.0" />
+                           </font></Label>
                         <Label text="Palabra mas corta">
                            <VBox.margin>
                               <Insets />
-                           </VBox.margin></Label>
-                        <Label fx:id="lbShorterword" text="Palabra" />
-                        <HBox prefHeight="31.0" prefWidth="235.0">
+                           </VBox.margin>
+                           <font>
+                              <Font name="Berlin Sans FB" size="14.0" />
+                           </font></Label>
+                        <Label fx:id="lbShorterword" text="Palabra">
+                           <font>
+                              <Font name="Berlin Sans FB" size="13.0" />
+                           </font></Label>
+                        <HBox prefHeight="20.0" prefWidth="261.0">
                            <children>
-                              <Label text="Cantidad de palabras por letra" />
-                              <ChoiceBox fx:id="chLetters1" prefHeight="26.0" prefWidth="44.0" />
+                              <Label prefHeight="16.0" prefWidth="204.0" text="Cantidad de palabras por letra:">
+                                 <font>
+                                    <Font name="Berlin Sans FB" size="14.0" />
+                                 </font></Label>
+                              <ChoiceBox fx:id="chLetters1" prefHeight="25.0" prefWidth="49.0">
+                                 <padding>
+                                    <Insets left="10.0" />
+                                 </padding>
+                                 <HBox.margin>
+                                    <Insets left="-6.0" />
+                                 </HBox.margin></ChoiceBox>
                            </children>
                         </HBox>
-                        <Label fx:id="lbTotalWordPerLetter" text="00000" />
+                        <Label fx:id="lbTotalWordPerLetter" text="00000">
+                           <font>
+                              <Font name="Berlin Sans FB" size="13.0" />
+                           </font>
+                        </Label>
                         <HBox prefHeight="27.0" prefWidth="235.0">
                            <children>
-                              <Label text="Frecuencia de letras" />
-                              <ChoiceBox fx:id="chLetters2" prefHeight="26.0" prefWidth="44.0" />
+                              <Label text="Frecuencia de letras:">
+                                 <font>
+                                    <Font name="Berlin Sans FB" size="14.0" />
+                                 </font></Label>
+                              <ChoiceBox fx:id="chLetters2" prefHeight="26.0" prefWidth="51.0">
+                                 <padding>
+                                    <Insets left="10.0" />
+                                 </padding>
+                                 <HBox.margin>
+                                    <Insets left="80.0" />
+                                 </HBox.margin></ChoiceBox>
                            </children>
                         </HBox>
-                        <Label fx:id="lbLetterFrequency" text="00000" />
-                        <Label text="Ultima palabra agregada" />
-                        <Label fx:id="lbLastWordAdded" text="Palabra" />
+                        <Label fx:id="lbLetterFrequency" text="00000">
+                           <font>
+                              <Font name="Berlin Sans FB" size="13.0" />
+                           </font></Label>
                      </children>
                      <padding>
                         <Insets left="15.0" />
@@ -53,7 +97,7 @@
                         <Insets />
                      </HBox.margin>
                   </VBox>
-                  <BarChart fx:id="barChart" prefHeight="346.0" prefWidth="529.0" title="Histograma de Longitudes de Palabras">
+                  <BarChart fx:id="barChart" prefHeight="354.0" prefWidth="448.0" title="Histograma de Longitudes de Palabras">
                     <xAxis>
                       <CategoryAxis label="Longitud" prefHeight="31.0" prefWidth="389.0" side="BOTTOM" fx:id="xAxis" />
                     </xAxis>
