--- a/Grupo06/src/main/resources/general/Game.fxml
+++ b/Grupo06/src/main/resources/general/Game.fxml
@@ -2,64 +2,55 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="paneGame" cache="true" cacheHint="SCALE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #eeeeee;" stylesheets="@../style/primary.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.GameController">
+<AnchorPane fx:id="paneGame" cache="true" cacheHint="SCALE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" stylesheets="@../style/game.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.GameController">
    <children>
-      <ImageView fx:id="ahorcadoView" fitHeight="283.0" fitWidth="378.0" layoutX="50.0" layoutY="82.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" />
-      <HBox fx:id="HBoxLabels" alignment="CENTER" layoutX="22.0" layoutY="377.0" prefHeight="100.0" prefWidth="861.0" spacing="30.0" style="-fx-background-color: #D8D9DA; -fx-border-color: #777777;" />
-      <TextField fx:id="textField" layoutX="610.0" layoutY="197.0" onKeyReleased="#complete" prefHeight="47.0" prefWidth="89.0">
+      <ImageView fitHeight="506.0" fitWidth="912.0" layoutX="-4.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/fondo.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="ahorcadoView" fitHeight="357.0" fitWidth="378.0" layoutX="50.0" layoutY="13.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="299.0" fitWidth="467.0" layoutX="472.0" layoutY="77.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/texto.png" />
+         </image>
+      </ImageView>
+      <HBox id="miHBox" fx:id="HBoxLabels" alignment="CENTER" layoutX="21.0" layoutY="386.0" prefHeight="100.0" prefWidth="861.0" spacing="30.0" style="-fx-background-color: #D8D9DA; -fx-border-color: #777777;" />
+      <TextField fx:id="textField" layoutX="620.0" layoutY="168.0" onKeyReleased="#complete" prefHeight="47.0" prefWidth="89.0">
          <font>
             <Font size="27.0" />
          </font>
       </TextField>
-      <Label layoutX="539.0" layoutY="271.0" prefHeight="40.0" prefWidth="144.0" text="Correctas">
+      <Label fx:id="numTryLabel" layoutX="564.0" layoutY="234.0" prefHeight="30.0" prefWidth="44.0" text="0">
          <font>
-            <Font size="20.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label id="closeHand" fx:id="backButton" alignment="CENTER" contentDisplay="CENTER" layoutX="868.0" layoutY="-1.0" onMouseClicked="#back" prefHeight="30.0" prefWidth="35.0" text="X">
-         <font>
-            <Font name="Berlin Sans FB Demi Bold" size="24.0" />
-         </font>
-      </Label>
-      <Label fx:id="numTryLabel" layoutX="567.0" layoutY="156.0" prefHeight="30.0" prefWidth="44.0" text="0">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="score" layoutX="539.0" layoutY="311.0" prefHeight="40.0" prefWidth="89.0" text="0">
+      <Label fx:id="score" alignment="CENTER" layoutX="556.0" layoutY="321.0" prefHeight="40.0" prefWidth="89.0" text="0">
          <font>
             <Font name="System Bold Italic" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="695.0" layoutY="271.0" prefHeight="40.0" prefWidth="183.0" text="High Score">
-         <font>
-            <Font name="System Italic" size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="highScoreLabel" layoutX="695.0" layoutY="311.0" prefHeight="40.0" prefWidth="80.0" text="0">
+      <Label fx:id="highScoreLabel" alignment="CENTER" layoutX="695.0" layoutY="322.0" prefHeight="40.0" prefWidth="80.0" text="0">
          <font>
             <Font name="System Bold Italic" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="64.0" layoutY="29.0" prefHeight="40.0" prefWidth="253.0" text="EL AHORCADO">
-         <font>
-            <Font name="System Italic" size="32.0" />
-         </font>
-      </Label>
-      <Label layoutX="492.0" layoutY="49.0" prefHeight="100.0" prefWidth="367.0" text="Intenta adivinar la palabra antes de que Jorge decida escribirle a su EX" wrapText="true">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="492.0" layoutY="159.0" text="Tienes     intentos para ayudarlo">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
+      <ImageView fitHeight="30.0" fitWidth="358.0" layoutX="509.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/titulo.png" />
+         </image>
+      </ImageView>
+      <ImageView id="closeHand" fitHeight="40.0" fitWidth="44.0" layoutX="14.0" layoutY="9.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/home.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
