--- a/Grupo06/src/main/resources/general/Game.fxml
+++ b/Grupo06/src/main/resources/general/Game.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="paneGame" cache="true" cacheHint="SCALE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" stylesheets="@../style/game.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.GameController">
+<AnchorPane fx:id="paneGame" cache="true" cacheHint="SCALE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" stylesheets="@../style/game.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.GameController">
    <children>
       <ImageView fitHeight="506.0" fitWidth="912.0" layoutX="-4.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -27,7 +27,7 @@
             <Font size="27.0" />
          </font>
       </TextField>
-      <Label fx:id="numTryLabel" layoutX="564.0" layoutY="234.0" prefHeight="30.0" prefWidth="44.0" text="0">
+      <Label id="numero" fx:id="numTryLabel" layoutX="564.0" layoutY="234.0" prefHeight="30.0" prefWidth="44.0" text="0">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -52,5 +52,10 @@
             <Image url="@../images/home.png" />
          </image>
       </ImageView>
+      <Label fx:id="lbCronometro" layoutX="21.0" layoutY="77.0" prefHeight="50.0" prefWidth="146.0" text="00:00">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
